<resources>
    <string name="app_name">Hackathon5.0</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="about_emitra">"ईमित्रा की जानकारी "</string>
    <string name="about_bhamashah">भामाशाह की जानकारी</string>
    <string name="emitra_feedback">ईमित्रा के लिय सुझाव</string>
    <string name="bhamashah_feedback">भामाशाह के लिय सुझाव</string>
    <string name="new_services_feedback">नई सेवाओं के लिए सुझाव दें</string>
    <string name="new_serices_title">नई सेवाओं के बारे में जानें</string>
    <string name="write_suggestions">यहां अपने सुझाव लिखें</string>
    <string name="or_record_audio_file">या अपने सुझाव रिकॉर्ड करें</string>
    <string name="start_recodring">रिकॉर्डिंग शुरू करने के लिए यहां क्लिक करें</string>
    <string name="stop_recording">रिकॉर्डिंग को रोकने के लिए यहां क्लिक करें</string>
    <string name="log_in_user">उपयोगकर्ता के रूप में लॉग इन करें</string>
    <string name="log_in_as_gov">सरकारी प्राधिकरण के रूप में लॉगिन करें</string>
    <string name="bhamashah_title">भामाशाह</string>
    <string name="emitra_title">ईमित्रा</string>
    <string name="other_title">अन्य</string>
</resources>
