<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditText
        android:id="@+id/feedback_edit_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/write_suggestions"

        android:gravity="center"/>

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        >

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_record_audio_file"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mic_image_view"


        android:src="@drawable/ic_mic_black_24dp"
        android:layout_centerInParent="true"
        />
        <TextView
            android:id="@+id/mic_record_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/start_recodring"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/mic_image_view"
            android:padding="10dp"
            />

    </RelativeLayout>








</LinearLayout>